--- a/FineWoodworkingBasic/Shared/PublicMainLayout.razor
+++ b/FineWoodworkingBasic/Shared/PublicMainLayout.razor
@@ -22,7 +22,10 @@
         <MudNavLink Href="/about" Match="NavLinkMatch.Prefix">
             <MudText Typo="Typo.h6" Class="px-4" Align="Align.Center" Color="Color.Inherit">About</MudText>
         </MudNavLink>
-        <MudIconButton OnClick="OpenDialog" Icon="@Icons.Material.TwoTone.Login" Color="Color.Tertiary" />
+        <MudIconButton OnClick="@ToggleOpen" Icon="@Icons.Material.TwoTone.Login" Color="Color.Tertiary" />
+        <MudPopover @ref="@Popover" Open="isOpen" OverflowBehavior="OverflowBehavior.FlipAlways" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" Paper="false" Duration="300">
+            <Login OnClick="@ToggleOpen"></Login>
+        </MudPopover>
     </MudStack>
 </MudAppBar>
 
@@ -34,10 +37,23 @@
 
 
 @code {
+    MudPopover Popover;
+
+    public bool isOpen = false;
+
+    public void ToggleOpen()
+    {
+        if (isOpen)
+            isOpen = false;
+        else
+            isOpen = true;
+    }
+
+
     private void OpenDialog()
     {
 
-        DialogOptions closeOnEscapeKey = new DialogOptions() { CloseOnEscapeKey = true, ClassBackground = "blur", CloseButton=true, NoHeader = true };
+        DialogOptions closeOnEscapeKey = new DialogOptions() { CloseOnEscapeKey = true, ClassBackground = "blur", CloseButton=true};
         DialogService.Show<Login>("", closeOnEscapeKey);
     }
 
