--- a/FineWoodworkingBasic/Components/Login.razor
+++ b/FineWoodworkingBasic/Components/Login.razor
@@ -1,12 +1,13 @@
 ﻿@using System.Text.RegularExpressions;
 @using System.ComponentModel.DataAnnotations;
 
-<MudPaper Class="pa-5" Elevation="4" style="border-radius: 30px 0px 30px 30px">
+<MudPaper Class="pa-5" Elevation="4" style="border-radius: 20px 0px 20px 20px">
     <MudForm @ref="Form" @bind-IsValid="@Success" @bind-Errors="@Errors">
-        <MudText Typo="Typo.h1" Class="justify-center" Style="font-size: 25px; font-weight: bold; left: 100px">Login,</MudText>
+        <MudText Typo="Typo.h1" Style="font-size: 25px; font-weight: bold; left: 100px">Login</MudText>
 
         <MudTextField
             T = "string"
+            @ref="EmailField"
             Label="Email"
             Class="mb-2"
             Style="width: 300px;"
@@ -14,8 +15,7 @@
             Adornment="Adornment.End"
             AdornmentIcon="@EmailIcon"
             Required="true"
-            RequiredError="Must have an email!">
-        </MudTextField>
+            RequiredError="Must have an email!"/>
 
         <MudTextField
             T = "string"
@@ -30,8 +30,7 @@
             OnAdornmentClick="ShowPassword"
             AdornmentAriaLabel="Show Password"
             Required="true"
-            RequiredError="Must have an password">
-        </MudTextField>
+            RequiredError="Must have an password"/>
 
 
         <MudButton 
@@ -56,6 +55,7 @@
 
 
     // Email
+    MudTextField<string> EmailField;
     string EmailIcon = Icons.Material.Filled.Email;
 
 
