--- a/FineWoodworkingBasic/Pages/Private/AddBrandPage.razor
+++ b/FineWoodworkingBasic/Pages/Private/AddBrandPage.razor
@@ -11,9 +11,19 @@
 <h1>Please Enter a New Brand</h1>
 
 <div class="form-group row">
-    <label for="brandName" class="col-sm-2 col-form-label">Brand Name</label>
+    <label 
+        for="brandName" 
+        class="col-sm-2 col-form-label">
+        Brand Name
+        </label>
     <div class="col-sm-10">
-        <input type="text" id="brandName" class="form-control" placeholder="Brand Name" @bind="@bName" @oninput="SetBName" />
+        <input 
+            type="text" 
+            id="brandName" 
+            class="form-control" 
+            placeholder="Brand Name" 
+            @bind="@bName" 
+            @oninput="SetBName" />
     </div>
 </div>
 <div class="form-group row">
