--- a/FineWoodworkingBasic/Shared/NavDrawer.razor
+++ b/FineWoodworkingBasic/Shared/NavDrawer.razor
@@ -2,9 +2,17 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
+        <MudIconButton 
+            Icon="@Icons.Material.Filled.Menu" 
+            Color="Color.Inherit" 
+            Edge="Edge.Start" 
+            OnClick="@ToggleDrawer" />
         <MudSpacer />
-        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/Garage-Folks" Target="_blank" />
+        <MudIconButton 
+            Icon="@Icons.Custom.Brands.GitHub" 
+            Color="Color.Inherit" 
+            Link="https://github.com/Garage-Folks" 
+            Target="_blank" />
     </MudAppBar>
     <MudDrawer @bind-Open="@open" Elevation="1">
         <MudDrawerHeader>
