--- a/FineWoodworkingBasic/Shared/PrivateLayout.razor
+++ b/FineWoodworkingBasic/Shared/PrivateLayout.razor
@@ -6,11 +6,25 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        <MudIconButton 
+            Icon="@Icons.Material.Filled.Menu" 
+            Color="Color.Inherit" 
+            Edge="Edge.Start" 
+            OnClick="@((e) => DrawerToggle())" />
         <MudSpacer />
-        <MudButton Href="/" StartIcon="@garage" IconColor="Color.Tertiary" DisableElevation="true">
+        <MudButton 
+            Href="/" 
+            StartIcon="@garage" 
+            IconColor="Color.Tertiary" 
+            DisableElevation="true">
             @*<MudButton Href="private" StartIcon="@garage" IconColor="Color.Tertiary" DisableElevation="true">*@
-            <MudText Typo="Typo.h6" Class="px-4" Align="Align.Center" Color="Color.Inherit">Garage Shop Woodworking - Private</MudText>
+                <MudText 
+                    Typo="Typo.h6" 
+                    Class="px-4" 
+                    Align="Align.Center" 
+                    Color="Color.Inherit">
+                    Garage Shop Woodworking - Private
+                </MudText>
         </MudButton>
         <MudSpacer />
         <MudSpacer />
