Small Error that needed to be fixed -Dustin Meyer

--- a/FineWoodworkingBasic/Components/Logout.razor
+++ b/FineWoodworkingBasic/Components/Logout.razor
@@ -7,7 +7,7 @@
         Style="left: 50px;" 
         Variant="Variant.Outlined" 
         Color="Color.Error" 
-        nClick="@Submit">
+        OnClick="@Submit">
         Log Out
     </MudButton>
 </MudPaper>
