--- a/FineWoodworkingBasic/Components/Login.razor
+++ b/FineWoodworkingBasic/Components/Login.razor
@@ -1,9 +1,7 @@
-﻿@using System.Text.RegularExpressions;
-@using System.ComponentModel.DataAnnotations;
-
+﻿
 <MudPaper Class="pa-5" Elevation="4" style="border-radius: 20px 0px 20px 20px">
     <MudForm @ref="Form" @bind-IsValid="@Success" @bind-Errors="@Errors">
-        <MudText Typo="Typo.h1" Style="font-size: 25px; font-weight: bold; left: 100px">Login</MudText>
+        <MudText Typo="Typo.h1" Style="font-size: 25px; font-weight:" Align="Align.Center">Login</MudText>
 
         <MudTextField
             T = "string"
@@ -42,17 +40,36 @@
             Disabled="@(!Success)">
             Login
         </MudButton>
-
     </MudForm>
+   <MudPaper Elevation="0" Style="text-wrap: none; align-text: center; margin-top: 10px">
+        <MudText 
+            Typo="Typo.body1"
+            Align="Align.Center"
+            Style="font-size: 15px; font-weight: 0px;">
+            Needs to create an account?
+
+            <MudLink
+                Color="Color.Primary"
+                Style="cursor: pointer; font-size: 15px"
+                OnClick="SwitchToRegister">
+                Click Here!
+            </MudLink>
+        </MudText>
+        </MudPaper>
+        
 </MudPaper>
 
-@code {
+@code
+{
 
-    [Parameter] public EventCallback<string> CloseOverlay {get; set;}
-    [Parameter] public EventCallback<string> LoggedIn {get; set;}
     MudForm Form;
     bool Success;
     string[] Errors = {};
+
+    [Parameter] public EventCallback<string> CloseOverlay {get; set;}
+    [Parameter] public EventCallback<string> LoggedIn {get; set;}
+    [Parameter] public EventCallback<string> ToggleRegisterView {get; set;}
+
 
 
     // Email
@@ -65,6 +82,7 @@
     InputType PasswordInput = InputType.Password;
     MudTextField<string> PasswordField1;
     bool isShow;
+
 
 
     // Show password on click of icon
@@ -89,5 +107,11 @@
         // Needs verification for login
         LoggedIn.InvokeAsync();
         CloseOverlay.InvokeAsync();
+    }
+
+    void SwitchToRegister()
+    {
+        // Needs register and login functionallity
+        ToggleRegisterView.InvokeAsync();
     }
 }
