Shopping Cart View with Filter -Dustin Meyer

--- a/FineWoodworkingBasic/Components/Private/PrivateNavMenu.razor
+++ b/FineWoodworkingBasic/Components/Private/PrivateNavMenu.razor
@@ -27,7 +27,7 @@
             HideExpandIcon="true">
                 <MudNavLink Href="private/inventory" Match="NavLinkMatch.Prefix">Search Here?</MudNavLink>
                 <MudNavLink Href="private/inventory/manage" Match="NavLinkMatch.Prefix">Manage Inventory</MudNavLink>
-                <MudNavLink Href="private/inventory/shopping-list" Match="NavLinkMatch.Prefix">Create Shopping List</MudNavLink>
+                <MudNavLink Href="private/inventory/shopping-list" Match="NavLinkMatch.Prefix">Shopping List</MudNavLink>
         </MudNavGroup>
 
         <MudNavLink 
