--- a/FineWoodworkingBasic/Shared/PrivateLayout.razor
+++ b/FineWoodworkingBasic/Shared/PrivateLayout.razor
@@ -39,7 +39,7 @@
         <PrivateNavMenu />
     </MudDrawer>
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Large" Class="my-16 pt-16">
+        <MudContainer MaxWidth="MaxWidth.Large" Class="pt-8">
             @Body
         </MudContainer>
     </MudMainContent>
