Grid and hamburger view for the shopping cart -Dustin Meyer

--- a/FineWoodworkingBasic/Components/Filter.razor
+++ b/FineWoodworkingBasic/Components/Filter.razor
@@ -3,7 +3,7 @@
         T="string" 
         @bind-Value="@Item.Value"
         Label="Filter"
-        Variant="Variant.Text" 
+        Variant="Variant.Outlined" 
         style="width: 300px; " 
         HelperText="Press enter to add filter" 
         HelperTextOnFocus="true"
