--- a/FineWoodworkingBasic/Components/ShoppingListGridItem.razor
+++ b/FineWoodworkingBasic/Components/ShoppingListGridItem.razor
@@ -1,4 +1,4 @@
-<MudCard style="border-radius: 25px;">
+<MudCard Elevation="25" style="border-radius: 25px;">
     <MudCardHeader Class="pa-5">
         <CardHeaderContent>
             <MudText Typo="Typo.body1">@ItemName</MudText>
