--- a/FineWoodworkingBasic/Components/Logout.razor
+++ b/FineWoodworkingBasic/Components/Logout.razor
@@ -1,4 +1,5 @@
-<MudPaper Class="pa-5 justify-center" Elevation="4" style="border-radius: 20px 0px 20px 20px">
+@using Service;
+<MudPaper Class="pa-5 justify-center" Elevation="4" style="border-radius: 20px 0px 20px 20px; min-width: 200px">
     <MudText 
         Class="mb-2">
         Would you like to log out?
@@ -14,14 +15,16 @@
 
 
 @code{
-    [Parameter] public EventCallback<string> CloseOverlay {get; set;}
-    [Parameter] public EventCallback<string> LoggedOut {get; set;}
+
+    AccountLogin login = new AccountLogin();
+    [Parameter] public EventCallback<string> ParentUpdate {get; set;}
 
     public void Submit()
     {
         // Simple way of handling the logout
-        LoggedOut.InvokeAsync();
-        CloseOverlay.InvokeAsync();
+        login.ToggleLoggedIn(false);
+        login.ToggleOverlay();
+        ParentUpdate.InvokeAsync();
     }
     
 }
